--- a/frontend/styles/css/style.css
+++ b/frontend/styles/css/style.css
@@ -204,13 +204,14 @@ header .modal-login-form .login-user-form {
   gap: 5px;
 }
 header .modal-login-form .login-user-form .code-login-container {
+  position: relative;
   display: flex;
   align-items: center;
 }
 header .modal-login-form .login-user-form .code-login-container .show-eye-login,
 header .modal-login-form .login-user-form .code-login-container .hidden-eye-login {
   position: absolute;
-  right: 10px;
+  right: -30px;
 }
 header .modal-login-form .login-user-form .code-login-container .show-eye-login {
   display: none;
@@ -281,6 +282,13 @@ header .modal-login-form .login-admin-form button:hover {
 main {
   flex: 1;
 }
+main .error404 {
+  background-image: url("../../assets/imgs/404.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  height: 100%;
+}
 
 /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
 /*/////////////////////////////// RESPONSIVE TABLET 768px //////////////////////////////////////*/
@@ -299,7 +307,7 @@ main {
   }
   header .modal-login-form .login-user-form .code-login-container .show-eye-login,
   header .modal-login-form .login-user-form .code-login-container .hidden-eye-login {
-    right: 60px;
+    right: -35px;
   }
   /*//////////////////////////////////// MAIN //////////////////////////////////////////////*/
   /*//////////////////////////////////// FOOTER ////////////////////////////////////////////*/
